--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,26 +1,5 @@
 @import './global';
 
-nav {
-    padding: 1rem;
-    width: fit-content;
-    margin: 4vh auto;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 25px;
-    ul {
-        text-align: center;
-        li {
-            width: 16vw;
-            list-style-type: none;
-            display: inline-block;
-            padding: 0 2em;
-            a {
-                color: olive;
-                font-size: 1.5rem;
-            }
-        }
-    }
-}
-
 #background {
     width: 100vw;
     height: 100vh;
@@ -35,8 +14,7 @@ nav {
     z-index: -10;
 }
 
-#landing {
-    height: 80vh;
+#main-landing {
     gap: 2rem;
     text-align: center;
     h1 {
@@ -58,41 +36,8 @@ nav {
         cursor: pointer;
     }
 }
-#back-button {
-    position: absolute;
-    top: 3vh;
-    left: 3vw;
-    background-color: rgba(0, 0, 0, 0.25);
-    border-radius: 50%;
-    width: 3.75rem;
-    height: 3.65rem;
-    img {
-        padding-top: 2px;
-        width: 3.5rem;
-        height: 3.5rem;
-    }
-}
-#next-button {
-    position: absolute;
-    top: 3vh;
-    left: calc(97vw - 3.5rem);
-    background-color: rgba(0, 0, 0, 0.25);
-    border-radius: 50%;
-    width: 3.75rem;
-    height: 3.65rem;
-    img {
-        padding-bottom: 2px;
-        width: 3.5rem;
-        height: 3.5rem;
-        transform: rotate(180deg);
-    }
-}
-#main-timeline {
-    height: fit-content;
-}
 #timeline {
     position: relative;
-    //top: 10vh;
     margin: 0 auto;
     width: 90vw;
     //height: 80vh; <- this one creats the timeline to be cut off (learning something new)
@@ -161,9 +106,6 @@ nav {
     left: 50%;
     margin-left: -3px;
 }
-#main-gallery {
-    height: 80vh;
-}
 #gallery {
     background-color: rgba(255, 213, 181, 0.5);
     border-radius: 25px;
@@ -183,5 +125,99 @@ nav {
         height: 16rem;
         object-fit: cover;
         border: 5px solid white;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    nav {
+        ul {
+            li {
+                a {
+                    font-size: 1.25rem;
+                }
+            }
+        }
+    }
+    #main-landing {
+        gap: 1rem;
+        h1 {
+            font-size: 6rem;
+        }
+        p {
+            font-size: 1rem;
+        }
+    }
+    #timeline {
+        width: 85vw;
+        .time-period {
+            margin-bottom: -3.5rem;
+            .description {
+                padding: 1rem 1.25rem;
+                h2 {
+                    font-size: 1.25rem;
+                }
+                p {
+                    font-size: .9rem;
+                    line-height: 1.1rem;
+                    br {
+                        display: none;
+                    }
+                }
+            }
+        }
+        .time-period::after {
+            width: 15px;
+            height: 15px;
+            right: -12px;
+        }
+        .right::after {
+            left: -12px;
+        }
+    }
+}
+@media screen and (max-width: 1366px) {
+    nav {
+        ul {
+            li {
+                a {
+                    font-size: 1.25rem;
+                }
+            }
+        }
+    }
+    #main-landing {
+        gap: 1rem;
+        h1 {
+            font-size: 8rem;
+        }
+        p {
+            font-size: 1rem;
+        }
+    }
+    #timeline {
+        width: 75vw;
+        .time-period {
+            .description {
+                margin-bottom: -.5rem;
+                h2 {
+                    font-size: 1.35rem;
+                }
+                p {
+                    font-size: 1rem;
+                    line-height: 1.25rem;
+                    br {
+                        display: none;
+                    }
+                }
+            }
+        }
+        .time-period::after {
+            width: 15px;
+            height: 15px;
+            right: -12px;
+        }
+        .right::after {
+            left: -12px;
+        }
     }
 }
